Fixed: 91-c, 1. Accordion + icon is not center aligned 2. Proper line height for Accordion title is not present (line height should be increased and set to 150 %) 3. Accordion section should not have 16 px padding on left and right side as per XD 4. The accordion title font weight seems less compared to XD

--- a/missingkids/less/accordion.less
+++ b/missingkids/less/accordion.less
@@ -10,12 +10,15 @@
         padding: 0;
     }
     .panel-title {
+        font-size: @font-size-small;
+        font-weight: bold;
         > a {
             background-color: #939597;
             border-radius: 10px 10px 0 0;
             color: @white;
             display: block;
             padding: 16px;
+            position: relative;
         }
         > a.collapsed {
             border-radius: 10px;
@@ -34,9 +37,11 @@
     float: right;
     color: @white;
     font-size: 16px;
-    margin-right: 16px;
     height: 16px;
     width: 16px;
+    position: absolute;
+    top: 40%;
+    right: 17px;
 }
 
 #form-accordion {
